# text-analysis

./: .gitignore  CMakeLists.txt  README.md  trash.txt
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml
documentation/html/: algorithms_8cpp.html  algorithms_8cpp_source.html  algorithms_8h.html  algorithms_8h_source.html  annotated.html  classes.html  computation_8cpp.html  computation_8cpp_source.html  computation_8h.html  computation_8h_source.html  dir_0782573e6555b26f5758eb3847f60d86.html  dir_18da18df9179f3dfe7042de7dee11eb7.html  dir_275089585c7fc1b5fd5d7d42c69cb1da.html  dir_6dfdd596525396cb296a0367e48d2f4d.html  dir_f241b253f53e88d557049f8d8c1c4fd9.html  filep_8cpp.html  filep_8cpp_source.html  filep_8h.html  filep_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_vars.html  index.html  main_8cpp.html  main_8cpp_source.html  menudata.js  statistics_8cpp.html  statistics_8cpp_source.html  statistics_8h.html  statistics_8h_source.html  structinput_struct-members.html  structinput_struct.html
documentation/html/search/: all_2.js  all_3.js  all_4.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_2.js  functions_5.js  functions_7.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
documentation/latex/: algorithms_8cpp.tex  algorithms_8cpp_source.tex  algorithms_8h.tex  algorithms_8h_source.tex  annotated.tex  computation_8cpp.tex  computation_8cpp_source.tex  computation_8h.tex  computation_8h_source.tex  dir_0782573e6555b26f5758eb3847f60d86.tex  dir_18da18df9179f3dfe7042de7dee11eb7.tex  dir_275089585c7fc1b5fd5d7d42c69cb1da.tex  dir_6dfdd596525396cb296a0367e48d2f4d.tex  dir_f241b253f53e88d557049f8d8c1c4fd9.tex  filep_8cpp.tex  filep_8cpp_source.tex  filep_8h.tex  filep_8h_source.tex  files.tex  main_8cpp.tex  main_8cpp_source.tex  refman.tex  statistics_8cpp.tex  statistics_8cpp_source.tex  statistics_8h.tex  statistics_8h_source.tex  structinput_struct.tex
documentation/man/man3/: D__.3  D__Workspace_.3  D__Workspace_C___.3  D__Workspace_C___textanal_.3  D__Workspace_C___textanal_source_.3  algorithms.cpp.3  algorithms.h.3  computation.cpp.3  computation.h.3  filep.cpp.3  filep.h.3  inputStruct.3  main.cpp.3  statistics.cpp.3  statistics.h.3
inputs/: how.txt  hpss.txt  sun.txt  test.txt
scripts/: start.sh  test
source/: CMakeLists.txt  algorithms.cpp  algorithms.h  computation.cpp  computation.h  filep.cpp  filep.h  hello_test.cc  hello_test.cpp  logging.cpp  logging.h  main.cpp  statistics.cpp  statistics.h
source/automation/: auto.py
source/test/: CMakeLists.txt  hello_test.cc
